Stranica za izmenu profila korisnika

--- a/appzaupravljanjehr_2020_0344/TEMPLATES/profile.html
+++ b/appzaupravljanjehr_2020_0344/TEMPLATES/profile.html
@@ -72,7 +72,7 @@
 <div class="profile-wrapper">
     <div class="profile-card">
 
-        <a href="{% url 'profile' %}" class="edit-profile">Izmeni profil</a>
+        <a href="{% url 'update_profile' %}" class="edit-profile">Izmeni profil</a>
 
         
         <div class="section-title">Lični podaci</div>
