--- a/appzaupravljanjehr_2020_0344/TEMPLATES/login.html
+++ b/appzaupravljanjehr_2020_0344/TEMPLATES/login.html
@@ -203,9 +203,11 @@
             <p class="podnaslov">Unesite Vaše kredencijale</p>
             {% if messages %}
                 {% for message in messages %}
+                    {% if message.tags == 'error' %}
                     <p style="color:#DC2626; font-size:14px; text-align:center; margin-bottom:16px;">
                         {{ message }}
                     </p>
+                    {% endif%}
                 {% endfor %}
             {% endif %}
 
