API rute za korisnika

--- a/appzaupravljanjehr_2020_0344/TEMPLATES/base.html
+++ b/appzaupravljanjehr_2020_0344/TEMPLATES/base.html
@@ -203,7 +203,7 @@
 
     <nav>
         <div class="logo">
-            <a href="{% url 'profile' %}">HR aplikacija</a>
+            <a href="{% url 'home' %}">HR aplikacija</a>
         </div>
         <div class="nav-links">
             <a href="{% url 'profile' %}">Ciljevi</a>
